Made style changes to help overflow issues, test on mobile.

--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -9,12 +9,15 @@
 
 
 body{
-    background-color: rgba(224, 255, 244, 1);
+    /* background-color: rgba(224, 255, 244, 1); */
+    background-color: yellow;
     width: 100%;
-    height: 100%;
+    height: 120%;
     background-size: cover;
-    background-position: center;
+    background-attachment: fixed;
+    min-height: 740px;
     min-width: 520px;
+    overflow: hidden;
 }
 
 
@@ -42,7 +45,7 @@ body{
 .tablink{
     width: 1em;
     min-width: 200px;
-    margin: 1%;
+    /* margin: 1%; */
     overflow: auto;
     margin-left: 2% auto;
     margin-right: 2% auto;
@@ -50,12 +53,19 @@ body{
 }
 
 
+.name{
+    font-family: Garamond, serif;
+    font-size: 1.5em;
+}
+
 
 .content{
     margin-left: 3rem;
     padding: 3%;
     float: left;
     left: 0;
+    font-family: Garamond, serif;
+
 }
 
 
@@ -68,8 +78,7 @@ body{
 .title{
     font-size: 3em;
     white-space: nowrap;
-    /* float:left;
-    left: 0; */
+    font-family: Garamond, serif;
 }
 
 
@@ -80,6 +89,7 @@ body{
     margin: 1% auto;
     margin-left: 2%;
     float: left;
+    padding: 1%;
 }
 
 
@@ -127,14 +137,13 @@ body{
     position: absolute;
     left: 0;
     right: 0;
-    width: 80%;
+    width: 88%;
     height: 100%;
     background-color: green;
-    /* overflow: auto; */
-    background-size: cover;
     display: block;
     margin-left: auto;
-    margin-right: auto;    
+    margin-right: auto;
+    overflow-y: auto;
 }  
 
 
@@ -151,6 +160,8 @@ body{
 
 #card-container{
     padding: 1%;
+    margin-top: 2%;
+    margin-left: -2%;
 }
 
 
@@ -161,6 +172,7 @@ body{
     font-size: 2.4rem;
     height: 3em;
     width: 80%;
+    font-family: Garamond, serif;
 }
 
 
@@ -172,6 +184,7 @@ body{
     display: block;
     text-align: center;
     margin-top: 2%;
+    margin-left: 1%;
     margin-bottom: 2%;
 }
 
@@ -179,7 +192,7 @@ body{
 
 #content_container{
     display: block;
-
+    /* overflow: hidden; */
 }
 
 
@@ -201,13 +214,10 @@ body{
     .title{
         font-size: 2em;
     }
-
     .image{
-        width: 5em;
-        height: 5em;
+        width: 2em;
+        height: 2em;
     }
-
-    
 
 
 }
